using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace StarForce
{
    public static partial class Constant
    {
        public static class Animator
        {
            public const string InputX = "InputX";
            public const string InputY = "InputY";
            public const string IsMoving = "IsMoving";
            public const string Attack = "Attack";
            public const string AttackWeapon = "AttackWeapon";
        }

        public static class Animation
        {
            public const string SkeletonIdle = "Skeleton_Idle";
            public const string SkeletonAttack = "Skeleton_Attack";
            public const string SkeletonReact = "Skeleton_React";
            public const string SkeletonWalk = "Skeleton_Walk";
            public const string SkeletonDead = "Skeleton_Dead";
            public const string SkeletonHit = "Skeleton_Hit";
        }
    }
}

